# logdetective-obs

./: .gitignore  README.md  REPORT.MD  get-logs.py  osc_log.py  script.py
bot/: bot.py
explain/openSUSE:Factory/: apache-arrow_standard_x86_64.txt  cpupower_standard_x86_64.txt  drbd_standard_x86_64.txt  evdi_standard_x86_64.txt  fooyin_standard_x86_64.txt  kismet_standard_x86_64.txt  leancrypto_standard_x86_64.txt  leechcraft_standard_x86_64.txt  libArcus_standard_x86_64.txt  mariadb-image_containerfile_x86_64.txt  microos-docserv-image_containerfile_x86_64.txt  openafs_standard_x86_64.txt  openjdk-11-devel-image_containerfile_x86_64.txt  openjdk-17-devel-image_containerfile_x86_64.txt  openjdk-21-devel-image_containerfile_x86_64.txt  openjdk-24-devel-image_containerfile_x86_64.txt  oqs-provider_standard_x86_64.txt  pulseeffects_standard_x86_64.txt  python-celery:test_standard_x86_64.txt  python-pgmagick_standard_x86_64.txt  rmt-server_standard_x86_64.txt  rtl8812au_standard_x86_64.txt  syslog-ng_standard_x86_64.txt  virt-libguestfs-tools-container_containerfile_x86_64.txt  wesnoth_standard_x86_64.txt  wyrmgus_standard_x86_64.txt
logs/openSUSE:Factory/: prompt.py
model-testing/: README.MD  prompt.yaml
osc_plugin/: README.md  pyproject.toml
osc_plugin/osc_ld_plugin/: plugin.py
osc_plugin/tests/: test_plugin.py
osc_plugin/tests/cassettes/test_plugin/: test_package_remote.yaml
review/openSUSE:Factory/: apache-arrow_standard_x86_64.jsonl  (+7 more)
scripts/: config.yml  gen-mr-comment.py  gunicorn-dev.config.py  ld.modelfile  local-config.yaml  run-ld-server.sh
