[project]
name = "osc_ld_plugin"
version = "0.1.0"
description = "An osc plugin to analyze failed build logs using logdetective"
authors = [
    {name = "Aazam Thakur",email = "aazamthakur@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "osc (>=1.17.0,<2.0.0)",
    "logdetective (>=1.7.0,<2.0.0)"
]

[project.urls]
repository = "https://github.com/openSUSE/logdetective-obs"

[tool.poetry]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"
twine = "^6.1.0"
pytest = "^8.4.1"
ruff = "^0.12.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
